WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
99170
Web Inspector: [Styles] !important priority not honored inside the same declaration
https://bugs.webkit.org/show_bug.cgi?id=99170
Summary
Web Inspector: [Styles] !important priority not honored inside the same decla...
Alexander Pavlov (apavlov)
Reported
2012-10-12 06:05:09 PDT
The Styles pane displaying div { height: 30px !important; height: 20px; } shows the first !important property as overridden, even though it takes precedence over the second one. Upstreaming
http://code.google.com/p/chromium/issues/detail?id=131749
Attachments
Patch
(11.19 KB, patch)
2012-10-12 07:18 PDT
,
Alexander Pavlov (apavlov)
yurys
: review+
webkit.review.bot
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexander Pavlov (apavlov)
Comment 1
2012-10-12 07:18:19 PDT
Created
attachment 168417
[details]
Patch
Yury Semikhatsky
Comment 2
2012-10-12 07:37:28 PDT
Comment on
attachment 168417
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=168417&action=review
> Source/WebCore/inspector/InspectorStyleSheet.cpp:542 > + shouldInactivate = true;
shouldInactivate -> shouldInactivatePrevious
WebKit Review Bot
Comment 3
2012-10-12 08:05:15 PDT
Comment on
attachment 168417
[details]
Patch
Attachment 168417
[details]
did not pass chromium-ews (chromium-xvfb): Output:
http://queues.webkit.org/results/14266337
New failing tests: inspector/styles/styles-overriden-properties.html inspector/styles/styles-new-API.html
Alexander Pavlov (apavlov)
Comment 4
2012-10-12 08:18:24 PDT
Committed
r131187
: <
http://trac.webkit.org/changeset/131187
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug