Web Inspector: [Styles] !important priority not honored inside the same declaration https://bugs.webkit.org/show_bug.cgi?id=99170

Reviewed by Yury Semikhatsky.

Source/WebCore:

Property priorities were not considered inside the same CSS rule. !important properties should stay active
even if followed by non-!important properties with the same name.

* inspector/InspectorStyleSheet.cpp:
(WebCore::InspectorStyle::styleWithProperties):
* inspector/front-end/StylesSidebarPane.js:
(WebInspector.StylePropertiesSection.prototype.onpopulate):
(WebInspector.ComputedStylePropertiesSection.prototype.rebuildComputedTrace):

LayoutTests:

* inspector/elements/elements-panel-styles-expected.txt:
* inspector/elements/resources/elements-panel-styles.css:
(.foo):

Canonical link: https://commits.webkit.org/117155@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@131187 268f45cc-cd09-0410-ab3c-d52691b4dbfc